# DeepWriter

./: .env.example  .gitignore  example_usage.py  init_db.py  main.py  pyproject.toml  test_chat.py  test_db.py  test_services_crud.py
.trae/documents/: hot_swap_config_plan.md  rag_improvement_plan.md  web_api_plan.md  writing_workflow_engine_plan.md
agents/: __init__.py  base.py  writer.py
agents/core/: __init__.py  base.py  registry.py
agents/specialized/: __init__.py  critic_agent.py  draft_agent.py  editor_agent.py  planner_agent.py  researcher_agent.py  summarizer_agent.py
agents/writer/: agent.py
api/: dependencies.py  main.py
api/middlewares/: cors.py  error_handler.py
api/routers/: documents.py  knowledge.py  messages.py  sessions.py  sse.py  tasks.py  writing.py
api/schemas/: base.py  document.py  knowledge.py  message.py  session.py  task.py  writing.py
capabilities/: __init__.py
config/: settings.py
data/: deepwriter.db
db/: __init__.py  database.py  models.py  repositories.py
docs/: ACCEPTANCE_TEST.md  deepwriter-plan.md
frontend/: index.html  package-lock.json
llm/: __init__.py  factory.py
rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
scripts/: ingest_document.py  test_continuation.py
services/: __init__.py  agent_status_service.py  document_service.py  message_service.py  models.py  session_service.py  writing_task_service.py
tools/: __init__.py  rag_retrieval.py  search.py
utils/: logging_config.py
workflows/: __init__.py  checkpoint.py  conditions.py  graph.py  models.py  orchestrator.py  state.py
(+62 files in other folders)
